# rizz

./: .gitignore  flake.nix  pyproject.toml  readme.md  rizz.ipynb
rizz/: app.py  config.py  main.py
rizz/engines/: __init__.py  bark.py  concatenator.py  editor.py  generator.py  movie.py  normalizer.py  ov_generator.py  paraphraser.py  parler.py  reddit.py  tiktok.py  vits.py  youtube.py
