[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "rizz"
version = "0.1.0"

authors = [{ name = "Max Mustermann", email = "mail@example.com" }]
maintainers = []
description = ""
readme = "readme.md"
keywords = []
license = { text = "MIT License" }

requires-python = ">=3.10"
dependencies = [
    "numpy",
    "praw",
    "moviepy",
    "gradio",
    "transformers",
    "parler-tts",
    "torch",
    "torchaudio",
    "python-dotenv",
]
[project.scripts]
rizz = "rizz.main:main"
