[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "rizz"
version = "0.1.0"

authors = [{ name = "Max Mustermann", email = "mail@example.com" }]
maintainers = []
description = ""
readme = "readme.md"
keywords = []
license = { text = "MIT License" }

requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "praw",
    "moviepy>=2.1",
    "gradio",
    "transformers>=4.47",
    "parler-tts@git+https://github.com/huggingface/parler-tts",
    "torch",
    "torchaudio",
    "python-dotenv",
    "outlines",
]
[project.scripts]
rizz = "rizz.main:main"


[tool.hatch.metadata]
allow-direct-references = true
